--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,21 +1,30 @@
 @use '../../styles/utils/mixins' as *;
 @use '../../styles/utils/variables' as *;
 
+.cart-page {
+  display: flex;
+  flex-direction: column;
+}
+
 .cart {
-  padding: 0 16px;
-  height: 100%;
-  margin-bottom: 56px;
+  padding: 24px 0 16px;
+  flex: 1;
   background-color: var(--background);
+
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 
   @include on-tablet {
     padding: 0 24px;
-    margin-bottom: 64px;
   }
 
   @include on-desktop {
     max-width: 1136px;
-    margin: auto;
+    margin: 0 auto;
+    width: 100%;
   }
+
   &__buttonBack {
     display: flex;
 
@@ -25,6 +34,7 @@
     height: 16px;
 
     transition: transform $effect-duration ease;
+
     &:hover {
       transform: scale(1.02);
     }
@@ -35,31 +45,36 @@
       align-items: center;
       justify-content: center;
     }
+
     &--text {
       font-size: 12px;
       font-weight: 700;
       color: var(--primary);
     }
   }
+
   &__title {
     font-size: 32px;
     font-weight: 800;
     color: var(--primary);
     margin-bottom: 32px;
   }
+
   &__section {
     display: flex;
     flex-direction: column;
     gap: 32px;
+    flex: 1;
+    min-height: 0;
 
     @include on-desktop {
       flex-direction: row;
       gap: 16px;
       width: 100%;
-      margin-bottom: 80px;
     }
   }
-  &__box {
+
+  .cart__box {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -90,11 +105,13 @@
       font-weight: 800;
       color: var(--primary);
     }
+
     &--text {
       font-size: 14px;
       font-weight: 600;
       color: var(--elements);
     }
+
     &--checkout {
       display: flex;
       box-sizing: border-box;
@@ -112,6 +129,7 @@
       color: var(--main);
       cursor: pointer;
       transition: transform $effect-duration ease;
+
       &:hover {
         transform: scale(1.03);
         background-color: var(--accent);
@@ -127,21 +145,23 @@
       }
     }
   }
+
   &__empty {
     display: flex;
-    position: relative;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 24px;
+    flex: 1;
 
     &--text {
-      position: absolute;
-      justify-content: center;
       font-size: 14px;
       color: var(--elements);
     }
+
     &--img {
-      width: 100%;
-      height: 100%;
+      width: 60%;
+      height: 60%;
       object-fit: contain;
     }
   }
@@ -184,6 +204,7 @@
       width: fit-content;
       cursor: pointer;
       transition: transform $effect-duration ease;
+
       &:hover {
         transform: scale(1.1);
       }
@@ -197,6 +218,7 @@
       padding: 7px;
       cursor: pointer;
       transition: transform $effect-duration ease;
+
       &:hover {
         transform: scale(1.1);
       }
@@ -206,6 +228,7 @@
         justify-content: center;
       }
     }
+
     &--name {
       text-decoration: none;
       font-size: 14px;
@@ -213,12 +236,14 @@
       color: var(--primary);
     }
   }
+
   &__buttons {
     display: flex;
     width: 96px;
     justify-content: space-between;
     align-items: center;
   }
+
   &__count {
     display: flex;
     padding: 16px;
@@ -230,6 +255,7 @@
       padding: 0;
       padding-right: 24px;
     }
+
     &--minus {
       display: flex;
       align-items: center;
@@ -242,16 +268,19 @@
 
       cursor: pointer;
       transition: transform $effect-duration ease;
+
       &:hover {
         transform: scale(1.1);
         box-shadow: 0 6px 18px var(--shadow);
       }
     }
+
     &--value {
       font-size: 14px;
       font-weight: 600;
       color: var(--primary);
     }
+
     &--plus {
       display: flex;
       align-items: center;
@@ -263,11 +292,13 @@
       background-color: var(--main);
       cursor: pointer;
       transition: transform $effect-duration ease;
+
       &:hover {
         transform: scale(1.1);
         box-shadow: 0 6px 18px var(--shadow);
       }
     }
+
     &--price {
       font-size: 22px;
       font-weight: 800;
